# tennis-reinforcement-learning

./: README.md  main.py  parsed_point.csv  parsed_points.csv  pyproject.toml  requirements.txt
app/agents/: base_agent.py  dqn_agent.py
app/data/: match_parser.py  transition_counter.py  transition_graph.py  transition_graph_2.py
app/environment/: tennis_engine.py  tennis_env.py
app/models/: env.py  shot.py  transition_graph.py
app/training/: trainer.py
docs/: apresentação.md  roadmap.md
explore/: transitions.ipynb
notebooks/: columns.py  shots.ipynb  transitions.ipynb
scripts/: count_transitions.py  parse_all_matches.py  sum_transition_counts.py  test.py  train.py
