[project]
name = "tennis-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.6.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv]
# Configure uv to use the private GitLab registry
index-url = "https://pypi.org/simple"
